# pyglrec

./: README.md  pyproject.toml
examples/: cube_object.py  cube_viz.py  gl_utils.py  render_cube.py  render_cube_headless.py  shader.py
src/pyglrec/: __init__.py  cuda_gl_interop.py  frame_buffer.py  frame_recorder.py  quad.py  shader.py  util.py
src/pyglrec/custom_ops/: cuda_gl_interop.cpp  rgba_conversion.cu  rgba_conversion.cuh  rgba_to_nv12.cu  rgba_to_nv12.cuh  utils.hpp
