[project]
name = "pyglrec"
version = "1.2.0"
description = "An OpenGL frame recorder with NVENC acceleration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shinei Arakawa", email = "arakawashinei1115@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.1",
    "imageio[ffmpeg]>=2.37.2",
    "numpy>=2.3.4",
    "pybind11>=3.0.1",
    "pynvvideocodec>=2.0.2; sys_platform != 'darwin'",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
develop = ["opencv-python>=4.11.0.86"]
examples = ["click>=8.3.0", "glfw>=2.10.0", "pyglm>=2.8.2", "tqdm>=4.67.1"]
